--- a/Ultramarine.Roslyn/Ultramarine.Roslyn.csproj
+++ b/Ultramarine.Roslyn/Ultramarine.Roslyn.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis" Version="2.10.0" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
